--- a/PathOfExileLadder/Base.lproj/Main.storyboard
+++ b/PathOfExileLadder/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Ladder View Controller-->
+        <!--Solo Self Found Hardcore Betrayal League-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="LadderViewController" customModule="PathOfExileLadder" customModuleProvider="target" sceneMemberID="viewController">
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="LadderCell" rowHeight="157" id="bSa-eA-QgD" customClass="CustomCellTableViewCell" customModule="PathOfExileLadder" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="LadderCell" rowHeight="157" id="bSa-eA-QgD" customClass="CustomCell" customModule="PathOfExileLadder" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="157"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bSa-eA-QgD" id="qGa-0Z-O1u">
@@ -66,6 +66,8 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="characterName" destination="7o0-Mc-OsB" id="jdH-3P-h4l"/>
+                                            <outlet property="rank" destination="Vbp-LO-4JH" id="RK2-eE-GQe"/>
                                             <segue destination="7wo-Xq-HYN" kind="show" id="QKO-Q1-dXa"/>
                                         </connections>
                                     </tableViewCell>
@@ -81,7 +83,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" id="PjQ-r6-dic"/>
+                    <navigationItem key="navigationItem" title="Solo Self Found Hardcore Betrayal League" id="PjQ-r6-dic">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="AZb-me-pP6"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="LadderTableView" destination="zOD-4a-AjX" id="EWM-Bj-ULx"/>
                     </connections>
@@ -98,54 +102,76 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ARY-BO-eKz">
-                                <rect key="frame" x="67" y="88" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ARY-BO-eKz">
+                                <rect key="frame" x="68" y="72" width="239" height="71.5"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Status" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7hw-GG-ksq">
-                                <rect key="frame" x="95" y="269" width="196" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7hw-GG-ksq">
+                                <rect key="frame" x="8" y="354.5" width="359" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lco-WQ-No1">
-                                <rect key="frame" x="56" y="337" width="251" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lco-WQ-No1">
+                                <rect key="frame" x="10" y="383.5" width="359" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="level" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oeg-Oi-jom">
-                                <rect key="frame" x="170" y="485" width="35" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="level" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oeg-Oi-jom">
+                                <rect key="frame" x="8" y="441" width="359" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Challenges" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5b8-zu-oWy">
-                                <rect key="frame" x="139" y="533" width="85" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Challenges" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5b8-zu-oWy">
+                                <rect key="frame" x="10" y="470" width="359" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Profile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Gc-IN-wIb">
-                                <rect key="frame" x="160" y="594" width="49" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="class" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IYJ-XY-NHJ">
+                                <rect key="frame" x="10" y="411.5" width="359" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="class" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IYJ-XY-NHJ">
-                                <rect key="frame" x="73" y="401" width="254" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cnG-uU-Qri">
+                                <rect key="frame" x="109" y="528" width="157" height="30"/>
+                                <state key="normal" title="Profile"/>
+                                <connections>
+                                    <action selector="profileButton:" destination="7wo-Xq-HYN" eventType="touchUpInside" id="s38-zz-iFO"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="5b8-zu-oWy" firstAttribute="top" secondItem="Oeg-Oi-jom" secondAttribute="bottom" constant="8" id="6tG-M7-4ix"/>
+                            <constraint firstItem="ARY-BO-eKz" firstAttribute="top" secondItem="zAy-tL-330" secondAttribute="top" constant="8" id="EgM-2a-IxK"/>
+                            <constraint firstItem="zAy-tL-330" firstAttribute="bottom" secondItem="cnG-uU-Qri" secondAttribute="bottom" constant="109" id="HaO-Ek-H6h"/>
+                            <constraint firstItem="cnG-uU-Qri" firstAttribute="leading" secondItem="zAy-tL-330" secondAttribute="leading" constant="109" id="HsL-CU-a59"/>
+                            <constraint firstItem="zAy-tL-330" firstAttribute="trailing" secondItem="lco-WQ-No1" secondAttribute="trailing" constant="6" id="Ixc-kI-JqQ"/>
+                            <constraint firstItem="Oeg-Oi-jom" firstAttribute="top" secondItem="IYJ-XY-NHJ" secondAttribute="bottom" constant="8.5" id="LCW-tq-2cf"/>
+                            <constraint firstItem="7hw-GG-ksq" firstAttribute="leading" secondItem="zAy-tL-330" secondAttribute="leading" constant="8" id="M3L-li-xY9"/>
+                            <constraint firstItem="IYJ-XY-NHJ" firstAttribute="leading" secondItem="zAy-tL-330" secondAttribute="leading" constant="10" id="N6E-UP-KyK"/>
+                            <constraint firstItem="7hw-GG-ksq" firstAttribute="top" secondItem="ARY-BO-eKz" secondAttribute="bottom" constant="211" id="OyZ-1A-dQt"/>
+                            <constraint firstItem="zAy-tL-330" firstAttribute="trailing" secondItem="ARY-BO-eKz" secondAttribute="trailing" constant="68" id="QMO-a2-aLd"/>
+                            <constraint firstItem="cnG-uU-Qri" firstAttribute="top" secondItem="5b8-zu-oWy" secondAttribute="bottom" constant="37" id="T1D-nV-WYR"/>
+                            <constraint firstItem="zAy-tL-330" firstAttribute="trailing" secondItem="IYJ-XY-NHJ" secondAttribute="trailing" constant="6" id="TIX-Gz-GOc"/>
+                            <constraint firstItem="IYJ-XY-NHJ" firstAttribute="top" secondItem="lco-WQ-No1" secondAttribute="bottom" constant="7" id="TeC-JM-Bum"/>
+                            <constraint firstItem="ARY-BO-eKz" firstAttribute="leading" secondItem="zAy-tL-330" secondAttribute="leading" constant="68" id="TjU-Xs-8ZB"/>
+                            <constraint firstItem="lco-WQ-No1" firstAttribute="top" secondItem="7hw-GG-ksq" secondAttribute="bottom" constant="8" id="VEL-Vu-G2X"/>
+                            <constraint firstItem="zAy-tL-330" firstAttribute="trailing" secondItem="cnG-uU-Qri" secondAttribute="trailing" constant="109" id="Xea-on-31I"/>
+                            <constraint firstItem="Oeg-Oi-jom" firstAttribute="top" secondItem="IYJ-XY-NHJ" secondAttribute="bottom" constant="8.5" id="Xxe-tO-1lV"/>
+                            <constraint firstItem="zAy-tL-330" firstAttribute="trailing" secondItem="7hw-GG-ksq" secondAttribute="trailing" constant="8" id="Xyn-Ae-MjM"/>
+                            <constraint firstItem="lco-WQ-No1" firstAttribute="leading" secondItem="zAy-tL-330" secondAttribute="leading" constant="10" id="Y4e-mH-61p"/>
+                            <constraint firstItem="5b8-zu-oWy" firstAttribute="leading" secondItem="zAy-tL-330" secondAttribute="leading" constant="10" id="ZY3-H3-nNC"/>
+                            <constraint firstItem="zAy-tL-330" firstAttribute="trailing" secondItem="Oeg-Oi-jom" secondAttribute="trailing" constant="8" id="b55-rK-P5q"/>
+                            <constraint firstItem="lco-WQ-No1" firstAttribute="top" secondItem="7hw-GG-ksq" secondAttribute="bottom" constant="8" id="clW-5P-oJ5"/>
+                            <constraint firstItem="5b8-zu-oWy" firstAttribute="top" secondItem="Oeg-Oi-jom" secondAttribute="bottom" constant="8" id="fiy-Qo-W5P"/>
+                            <constraint firstItem="Oeg-Oi-jom" firstAttribute="leading" secondItem="zAy-tL-330" secondAttribute="leading" constant="8" id="hPF-o0-faw"/>
+                            <constraint firstItem="IYJ-XY-NHJ" firstAttribute="top" secondItem="lco-WQ-No1" secondAttribute="bottom" constant="7" id="rv5-TA-TxD"/>
+                            <constraint firstItem="zAy-tL-330" firstAttribute="trailing" secondItem="5b8-zu-oWy" secondAttribute="trailing" constant="6" id="xbt-wH-hka"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="zAy-tL-330"/>
                     </view>
                     <connections>
@@ -155,13 +181,12 @@
                         <outlet property="className" destination="IYJ-XY-NHJ" id="6pw-Y6-OCY"/>
                         <outlet property="level" destination="Oeg-Oi-jom" id="uhy-Ce-4kE"/>
                         <outlet property="name" destination="lco-WQ-No1" id="xgr-me-Zo3"/>
-                        <outlet property="profile" destination="3Gc-IN-wIb" id="2kh-ek-HKI"/>
                         <outlet property="status" destination="7hw-GG-ksq" id="KsR-OL-pFD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rnO-su-JSH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1933.5999999999999" y="103.89805097451276"/>
+            <point key="canvasLocation" x="1884" y="103.89805097451276"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="eXf-2n-5Sh">
